vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_audio_bgm_and_sfx.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- PlayAudio:
    path: bgm/Signal.mp3
    is_bgm: true
- PlayAudio:
    path: sfx/click.wav
    is_bgm: false
