vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_change_bg_with_dissolve.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- ChangeBG:
    path: bg/sky.jpg
    transition:
      name: Dissolve
      args:
        - - duration
          - Number: 1.5
