vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_change_scene_with_fade.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- ChangeScene:
    path: bg/night.jpg
    transition:
      name: Fade
      args:
        - - duration
          - Number: 1
