vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_change_scene_with_rule.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- ChangeScene:
    path: bg/new.jpg
    transition:
      name: rule
      args:
        - - mask
          - String: rule_10.png
        - - duration
          - Number: 1
        - - reversed
          - Bool: true
