vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_chapter_and_label.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- Chapter:
    title: Chapter 1
    level: 1
- Label:
    name: intro
- Dialogue:
    speaker: ~
    content: 开始。
    inline_effects: []
    no_wait: false
