vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_choice.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- Choice:
    style: 横排
    options:
      - text: 选项1
        target_label: label1
      - text: 选项2
        target_label: label2
