vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_dialogue_no_wait.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- Dialogue:
    speaker: ~
    content: 画面渐渐暗了下来...
    inline_effects: []
    no_wait: true
