vn-runtime/src/script/parser/tests/snapshots/vn_runtime__script__parser__tests__snapshots__snapshot_dialogue_with_speaker.snap
---
source: vn-runtime/src/script/parser/tests/snapshots.rs
expression: script.nodes
---
- Dialogue:
    speaker: 羽艾
    content: 为什么会变成这样呢？
    inline_effects: []
    no_wait: false
